WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103874
[BlackBerry] VKB flickers in and out when tapping on webview after text selection on URL bar
https://bugs.webkit.org/show_bug.cgi?id=103874
Summary
[BlackBerry] VKB flickers in and out when tapping on webview after text selec...
Sean Wang
Reported
2012-12-03 03:43:21 PST
RIM Bug:245678 Steps: 1) Launch browser and navigate to a site 2) Tap on the URL bar so that the text is highlighted. 3) Press and hold the URL bar. 4) Tap on the webcontent to dismiss selection and CCM Actual: 3) The VKB is dismissed and the CCM is displayed on the side. 4) You would see the VKB flicker in and out. Expected: 3) The VKB is dismissed and the CCM is displayed on the side. 4) The text selection on the URL bar is dismissed and the CCM disappears.
Attachments
patch
(4.36 KB, patch)
2012-12-03 03:53 PST
,
Sean Wang
rwlbuis
: review+
xuewen.ok
: commit-queue-
Details
Formatted Diff
Diff
patch
(4.55 KB, patch)
2012-12-04 18:27 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
patch
(4.60 KB, patch)
2012-12-04 18:57 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2012-12-03 03:53:50 PST
Created
attachment 177225
[details]
patch
>It looks safe but that assumes the change event will re trigger, if not we risk having a stale selection >overlay if the layout change modifies it.
There is a function "void FrameView::performPostLayoutTasks()" which will call FrameSelection::updateAppearance() on every time the FrameView layout is finished. So I think the selection changing will be notified at last. If we don't ensure it, another solution is to check and layoutIfNeeded at the beginning of "SelectionHandler::selectionPositionChanged()".
Rob Buis
Comment 2
2012-12-04 07:19:53 PST
Comment on
attachment 177225
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=177225&action=review
LGTM, but please fix the ChangeLog before landing.
> Source/WebKit/blackberry/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
What PR and internal reviewer?
> Source/WebKit/blackberry/ChangeLog:9 > + At the same time, the thread 5 is executing compositeLayers and it will dispatch
thread 5 is a bit imprecise...
Sean Wang
Comment 3
2012-12-04 18:27:10 PST
Created
attachment 177637
[details]
patch Fix change log.
Sean Wang
Comment 4
2012-12-04 18:57:58 PST
Created
attachment 177645
[details]
patch Fix change log.
Charles Wei
Comment 5
2012-12-04 19:18:33 PST
Comment on
attachment 177645
[details]
patch commit.
WebKit Review Bot
Comment 6
2012-12-04 21:12:08 PST
Comment on
attachment 177645
[details]
patch Clearing flags on attachment: 177645 Committed
r136633
: <
http://trac.webkit.org/changeset/136633
>
Rob Buis
Comment 7
2013-01-04 09:48:37 PST
Landed in
r136633
, closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug